@@ -17,8 +17,7 @@ public class PascalsTriangle118 {
         for (int i = 1; i < numRows; i++) {
             List<Integer> row = new ArrayList<>();
             row.add(1);
-            for (int j = 1; j < i; j++)
-                row.add(result.get(result.size() - 1).get(j) + result.get(result.size() - 1).get(j - 1));
+            for (int j = 1; j < i; j++) row.add(result.getLast().get(j) + result.getLast().get(j - 1));
             row.add(1);
             result.add(row);
         }
